# hexagoon.space

./: .gcloudignore  .gitignore  .secrets_example.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  readme.md  requirements.txt  settings.toml
Acoes/: ConstrutorAcoes.py  QuestaoAcoes.py  TesteAcoes.py  UsuarioAcoes.py
Acoes/Handler/: AcoesHandler.py
Acoes/Initiallizer/: AcoesInitiallizer.py
Conexoes/Internet/: Proxy.py
Conexoes/Mongo/: AsyncRepository.py  MongoSetup.py
Endpoints/: QuestaoEndpoints.py  TesteEndpoints.py  UsuarioEndpoints.py
Endpoints/Handler/: ResponseHandler.py
Entrypoints/: QuestaoEntrypoints.py  QuestoesEntrypoints.py  TesteEntrypoints.py  UsuarioEntrypoints.py
Entrypoints/Handler/: EntrypointHandler.py  ResponseHandler.py
Estaticos/Feather/: respostas-todas-sem_erros
Estaticos/js/: testeCorreto.js  testeTosco.js
Excecoes/: ExcecoesHook.py  ExceptionHandlers.py  GenericValidationExceptions.py  MongoExceptions.py  QuestaoExceptions.py  TesteExceptions.py  UsuarioExceptions.py  ValidationExceptions.py
Extrator/: QConcurso.py  Site.py
Model/: Questao.py  Teste.py  Token.py  Usuario.py  Vertice.py
Regras/: ConstrutorRegras.py  QuestaoRegra.py  QuestaoRegras.py  TesteRegras.py  UsuarioRegras.py
Regras/Handler/: RegrasHandler.py
Regras/Initiallizer/: RegrasInitiallizer.py
Repositorio/Mongo/: MongoBasico.py  MongoSetup.py  MongoSetupAssincrono.py  QuestaoRepository.py  TesteRepository.py  UsuarioRepository.py  VerticeRepository.py
Rotas/: UsuarioRotas.py
Templates/: testeCorreto.html  testeTosco.html
Validations/: CustomValidations.py  PasswordValidation.py  PydanticCustomValidations.py  RolesValidation.py  TokenValidation.py
banco_dados/mongodb/: load_data.py
banco_dados/sql_alchemy/: load_data.py
estaticos/js/: artigo.js  login.js  usuarios.js
extrator/: migrar_sql_mongo.py
logger/: gcp_logger.py
recursos/: acoes_initiallizer.py  regras_initiallizer.py  response_handler.py  routers_build.py
recursos/basic_exceptions/: handler_exception.py  token_exceptions.py
templates/: base_artigos.html  usuarios.html
testes/: conftest.py
(+77 files in other folders)
