[tool.poetry]
name = "hexagoon"
version = "0.1.0"
description = "backend app for hexagoon site"
authors = ["Fabricio Gatto Lourençone <fa_gatto7@yahoo.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.68.1"
uvicorn = "^0.15.0"
gunicorn = "^20.1.0"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
PyJWT = {extras = ["crypto"], version = "^2.1.0"}
SQLAlchemy = "^1.4.25"
aiofiles = "^0.7.0"
pydantic = {extras = ["email"], version = "^1.8.2"}
Jinja2 = "^3.0.2"
dynaconf = "^3.1.7"
cx-Oracle = "^8.3.0"

[tool.poetry.dev-dependencies]
pg8000 = "^1.29.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "1.0"
testpaths = [
    "testes"
]

