[tool.poetry]
name = "hexagoon-mongodb"
version = "0.1.0"
description = "backend app for hexagoon-mongodb"
authors = ["Fabricio Gatto Lourençone <fa_gatto7@yahoo.com.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
pymongo = "^4.2.0"
beautifulsoup4 = "^4.10.0"
uvicorn = "^0.18.3"
gunicorn = "^20.1.0"
passlib = "^1.7.4"
bcrypt = "^4.0.0"
PyJWT = {extras = ["crypto"], version = "^2.1.0"}
aiofiles = "^22.1.0"
dynaconf = "^3.1.9"
pydantic = {extras = ["email"], version = "^1.10.2"}
Jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
requests = "^2.28.1"
pytest = "^7.1.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
